# silvr

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config_train.yaml  pyproject.toml  render.py  requirements.txt
.docker/: Dockerfile  docker_compose.yaml
.github/workflows/: ruff.yml
config/: 2023-09-02-roq-hbac.yaml  2024-03-13-roq-01.yaml
scripts/: config_train.yaml  data_downloader.py  train.py  utils.py
silvr/: cloud_exporter.py  lidar_dataset.py  lidar_depth_nerfacto.py  lidar_normal_nerfacto.py  loss.py  silvr_config.py  silvr_dataparser.py  silvr_pipeline.py  silvr_renderer.py  submap.py  utils.py
