[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "silvr"
version = "0.0.1"
description = "Scalable Lidar-Visual Reconstruction"
readme = "README.md"
# license = { text="Apache 2.0"}
# requires-python = ">=3.8.0"
# classifiers = ["Programming Language :: Python :: 3",]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# [project.scripts]
# ndp = "silvr.test:main"

[project.entry-points.'nerfstudio.method_configs']
lidar_nerfacto = 'silvr.silvr_config:Lidar_nerfacto'
lidar_depth_nerfacto = 'silvr.silvr_config:Lidar_depth_nerfacto'

[project.optional-dependencies]
style = [
    "mypy",
    "black",
    "isort",
    "docformatter"
]
test = ["pytest", "pytest-datadir"]
dev = ["silvr[test, style]", "ipdb"]

[tool.setuptools.packages.find]
include = ["silvr*"]

[tool.ruff]
line-length = 120
respect-gitignore = false
target-version = "py38"
lint.select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "I",  # isort formatting.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
]
lint.ignore = [
    "E501",  # Line too long.
    "F722",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Globa statement updates are discouraged.
    "PLW2901",  # For loop variable overwritten.
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["nerfstudio"]
split-on-trailing-comma = false